--- a/index.html
+++ b/index.html
@@ -5,30 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>DevFolio</title>
-
     <!-- Google fonts link-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
     <!-- font awesome  -->
     <link rel="stylesheet" href="all.min.css">
     <!-- bootstrp icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
     <!-- Bootstrap link -->
     <link rel="stylesheet" href="bootstrap.min.css">
-
     <!-- Own style -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-light">
-    <!--nav  -->
     <header class="mb-5">
-        <nav class="navbar navbar fixed-top  navbar-expand-lg navbar-dark bg-black my-3">
+    <!--nav  -->    
+        <nav class="navbar navbar fixed-top  navbar-expand-lg navbar-dark bg-black ">
             <div class="container ">
                 <div class="container-fluid d-flex justify-content-between align-items-center">
                     <h3>
@@ -49,16 +44,16 @@
                                     <a class="nav-link active text-light " aria-current="page" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">About</a>
+                                    <a class="nav-link text-light" href="#about">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Services</a>
+                                    <a class="nav-link text-light" href="#services">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Work</a>
+                                    <a class="nav-link text-light" href="#portofolio">Work</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Blog</a>
+                                    <a class="nav-link text-light" href="#blog">Blog</a>
                                 </li>
 
                                 <!-----------------------------Drop------------------------------------------------------------------->
@@ -78,7 +73,7 @@
 
                                 <!--- end of drop---------------------------------------------------------------- -->
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Contact</a>
+                                    <a class="nav-link text-light" href="#contact">Contact</a>
                                 </li>
                             </ul>
 
@@ -89,6 +84,7 @@
         </nav>
 
         <!-- hero -->
+      
         <div id="hero" class="bg-image min-vh-100 d-flex align-items-center text-center text-white">
             <div class="container">
                 <div class="row justify-content-center">
@@ -190,13 +186,13 @@
                 </div>
             </div>
         </section>
-
+        </main>
         <!-- section services -->
         <section id="services ">
             <div class="container">
                 <div class="row text-center pt-5">
                     <div class="title-box">
-                        <h3 class="title-heading fw-bolder fs-1 mb-3">Services</h3>
+                        <h3 class="title-heading  mb-3 display-3 fw-bolder">SERVICES</h3>
                         <p class="subtitle-a">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -323,7 +319,7 @@
             <div class="container py-5">
                 <div class="row text-center text-white ">
                     <!-- single counter -->
-                    <div class="col-md-3 single-counter">
+                    <div class="col-sm-3 single-counter">
                         <div class="counter-box rounded-4  text-center">
                             <div class="counter-wrapper py-4  d-flex justify-content-center">
                                 <div
@@ -338,7 +334,7 @@
                         </div>
                     </div>
                     <!-- single counter -->
-                    <div class="col-md-3 single-counter">
+                    <div class="col-sm-3 single-counter">
                         <div class="counter-box rounded-4  text-center">
                             <div class="counter-wrapper py-4  d-flex justify-content-center">
                                 <div
@@ -354,7 +350,7 @@
                         </div>
                     </div>
                     <!-- single counter -->
-                    <div class="col-md-3 single-counter">
+                    <div class="col-sm-3 single-counter">
                         <div class="counter-box rounded-4  text-center">
                             <div class="counter-wrapper py-4  d-flex justify-content-center">
                                 <div
@@ -370,7 +366,7 @@
                         </div>
                     </div>
                     <!-- single counter -->
-                    <div class="col-md-3 single-counter">
+                    <div class="col-sm-3 single-counter">
                         <div class="counter-box rounded-4  text-center">
                             <div class="counter-wrapper py-4  d-flex justify-content-center">
                                 <div
@@ -396,7 +392,7 @@
             <div class="container">
                 <div class="row text-center py-5">
                     <div class="title-box">
-                        <h3 class="title-heading  mb-3 display-4 fw-bolder">PORTFOLIO</h3>
+                        <h3 class="title-heading  mb-3 display-3 fw-bolder">PORTFOLIO</h3>
                         <p class="subtitle-a">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -585,16 +581,20 @@
             <div class="container">
                 <div class="row">
                     <div class="title-box text-center">
-                        <h3 class="title-heading  mb-3 display-4 fw-bold">BLOG</h3>
+                        <h3 class="title-heading  mb-3 display-3 fw-bold">BLOG</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
 
                     <div class="row row-cols-1 row-cols-md-3 g-4">
-                        <div class="col">
+                        <div class="col-lg-4">
                             <div class="card h-100">
                                 <img src="images/post-1.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">See more ideas about Travel</h5>
+                                <div class="card-body position-relative">
+                                    <div class="card-category-box bg-primary d-flex  align-items-center justify-content-center rounded">
+                                       <h6 class="category text-white pt-1">TRAVEL</h6> 
+                                    </div>
+
+                                    <h5 class="card-title mt-2">See more ideas about Travel</h5>
                                     <p class="card-text">Proin eget tortor risus. Pellentesque in ipsum id orci porta
                                         dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
                                     </p>
@@ -611,11 +611,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-lg-4">
                             <div class="card h-100">
                                 <img src="images/post-2.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">See more ideas about Travel</h5>
+                                <div class="card-body position-relative">
+                                    <div class="card-category-box bg-primary d-flex  align-items-center justify-content-center rounded">
+                                        <h6 class="category text-white pt-1 text-nowrap">WEB DESIGN</h6> 
+                                     </div>
+                                    <h5 class="card-title pt-2">See more ideas about Travel</h5>
                                     <p class="card-text">Proin eget tortor risus. Pellentesque in ipsum id orci porta
                                         dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
                                     </p>
@@ -632,12 +635,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-lg-4">
                             <div class="card h-100">
                                 <img src="images/post-3.jpg" class="card-img-top" alt="...">
 
-                                <div class="card-body">
-                                    <h5 class="card-title">See more ideas about Travel</h5>
+                                <div class="card-body position-relative">
+                                    <div class="card-category-box bg-primary d-flex  align-items-center justify-content-center rounded">
+                                        <h6 class="category text-center align-items-center text-white pt-1 text-nowrap ">WEB DESIGN</h6> 
+                                     </div>
+                                    <h5 class="card-title pt-2">See more ideas about Travel</h5>
                                     <p class="card-text">Proin eget tortor risus. Pellentesque in ipsum id orci porta
                                         dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
                                     </p>
@@ -661,11 +667,11 @@
         </section>
 
         <!-- Contact -->
-        <section id="contact" class="my-5 contact ">
+        <section id="contact" class="mt-5 contact ">
             <div class="container py-5" >
                 <div class="row bg-white p-5 ">
                     <div class="col-md-6 ">
-                        <div class="title-box-2"><h5 class="title-left">Send Us a Message </h5></div>
+                        <h5 class="title-left mb-5">Send us a Message</h5>
                         <div>
                             <form>
                                 <div class="row ">
@@ -688,38 +694,38 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
+                        <h5 class="title-left mb-5">Get in Touch</h5>
                         <div class="more-info">
                             <p class="lead">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem expedita aperiam aliquid at. Totam magni ipsum suscipit amet? Autem nemo esse laboriosam
                                 ratione nobis mollitia inventore?
                             </p>
-                            <ul class="list-ico">
-                                <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                                <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                                <li><span class="bi bi-envelope"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6a0905041e0b091e2a0f120b071a060f44090507">[email&#160;protected]</a></li>
+                            <ul class="list-icons ps-0">
+                                <li class=" py-1"><i class="fa-solid fa-location-dot me-2"></i> 329 WASHINGTON ST BOSTON, MA 02108</li>
+                                <li class=" py-1"><i class="fa-solid fa-mobile-screen-button me-2"></i> (617) 557-0089</li>
+                                <li class=" py-1"><i class="fa-regular fa-envelope me-2"></i>  contact@example.com</li>
                             </ul>
                         </div>
                         <div class="socials">
-                            <ul>
+                            <ul class="ps-0 py-2 d-flex ">
                                 <li>
-                                    <a href="">
-                                        <span class="ico-circle"><i class="bi bi-facebook"></i></span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
-                                        <span class="ico-circle"><i class="bi bi-instagram"></i></span>
+                                    <a href="#">
+                                       <i class="fa-brands fa-instagram"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
-                                        <span class="ico-circle"><i class="bi bi-twitter"></i></span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
-                                        <span class="ico-circle"><i class="bi bi-linkedin"></i></span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -727,14 +733,22 @@
                     </div>
                 </div>
         </section>
-
-
-
-
-
-
-
-
+   
+        <footer class="mb-0 py-4">
+            <div class="container-fluid ">
+                <div class="row position-relative">
+                    <div class="col-sm-12">
+                        <div class="copyright-box">
+                            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+                            <div class="credits">Designed by <a href="#" class="text-white">BootstrapMade</a></div>
+                        </div>
+                    </div>
+                    <div class="arrow-up">
+                        <i class="fas fa-arrow-up"></i>
+                    </div>
+                </div>
+            </div>
+        </footer>
         <script src="all.min.js"></script>
         <script src="bootstrap.bundle.min.js"></script>
 </body>
