--- a/index.html
+++ b/index.html
@@ -38,43 +38,63 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
 
                                 <li class="nav-item">
                                     <a class="nav-link active text-light " aria-current="page" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#about">About</a>
+                                    <a class="nav-link text-light" href="#about">ABOUT</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#services">Services</a>
+                                    <a class="nav-link text-light" href="#services">SERVICES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#portofolio">Work</a>
+                                    <a class="nav-link text-light" href="#portofolio">WORK</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#blog">Blog</a>
+                                    <a class="nav-link text-light" href="#blog">BLOG</a>
                                 </li>
 
                                 <!-----------------------------Drop------------------------------------------------------------------->
                                 <li class=" dropdown">
                                     <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Dropdown
+                                        DROP DOWN
                                     </a>
                                     <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                                         <li><a class="dropdown-item" href="#">Drop Down 1</a></li>
-                                        <li><a class="dropdown-item " href="#">Drop Down 2</a></li>
-                                        <li><a class="dropdown-item " href="#">Drop Down 3</a></li>
-                                        <li><a class="dropdown-item " href="#">Drop Down 4</a></li>
-
-                                    </ul>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Deep Dropdown  &raquo;</a>
+                                            <ul class="dropdown-menu dropdown-submenu">
+                                                <li>
+                                                  <a class="dropdown-item" href="#">Deep Drop Down 1</a>
+                                                </li>
+                                                <li>
+                                                  <a class="dropdown-item" href="#">Deep Drop Down 2</a>
+                                                </li>
+                                                <li>
+                                                  <a class="dropdown-item" href="#">Deep Drop Down 3</a>
+                                                </li>
+                                                <li>
+                                                  <a class="dropdown-item" href="#">Deep Drop Down 4</a>
+                                                </li>
+                                                <li>
+                                                  <a class="dropdown-item" href="#">Deep Drop Down 5</a>
+                                                </li>
+                                            </ul>   
+                                     </li>
+                                    <li><a class="dropdown-item " href="#">Drop Down 3</a></li>
+                                    <li><a class="dropdown-item " href="#">Drop Down 4</a></li>  
+                                    </ul> 
                                 </li>
 
                                 <!--- end of drop---------------------------------------------------------------- -->
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#contact">Contact</a>
+                                    <a class="nav-link text-light" href="#contact">CONTACT</a>
                                 </li>
+                            
+                            
                             </ul>
 
                         </div>
